--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -17,12 +17,12 @@ $color-quinary: #2e3940;
 
 :root {
   // COLOR VARIABLES
-  --color-bg-primary: #fef7c6;
+  --color-bg-primary: #E29CE5;
 	--color-bg-primary-light: #c68240;
   --color-bg-primary-medium: #3e6a00;
   --color-bg-primary-dark: #0D0803;
 
-	--color-bg-secondary: #3e6a00;
+	--color-bg-secondary: #F8E4F6;
   --color-bg-other: #c68240;
   --color-bg-inverse: #3e6a00;
 
